# gbmreadsep

./: AUDIT_REPORT.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: USER_JOURNEY.md  api_reference.md  cli_reference.md  faq.md  glossary.md  index.md  interpretation.md  limitations.md  nanopore_tutorial.md  setup.md  troubleshooting.md  tutorial.md  tutorial_bam_vcf.md  tutorial_fastq_end2end.md
docs/_generated/: anchors_index.json
examples/: make_toy_data.sh  run_end2end_fastq.sh  run_minimal_bam_vcf.sh
scripts/: bootstrap_conda.sh  bootstrap_ubuntu.sh
src/gbmreadsep/: __init__.py  anchor_index.py  anchors.py  assigner.py  cli.py  doctor.py  external.py  models.py  plotting.py  report.py  toy_data.py  utils.py  validation.py
src/gbmreadsep/nanopore/: __init__.py  align.py  pipeline.py  somatic.py
tests/: test_anchor_index.py  test_cli_smoke.py  test_cli_usability.py  test_core.py
tutorials/: nanopore_endtoend.sh  run_end_to_end.sh
