[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gbmreadsep"
version = "0.2.0"
description = "Bayesian read-level tumor vs TME assignment for bulk DNA sequencing using somatic anchor variants."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "GBMReadSep Contributors"}
]
keywords = ["glioblastoma", "bam", "vcf", "tumor purity", "read assignment", "bayesian"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
  "pysam>=0.22.0",
  "numpy>=1.23",
  "matplotlib>=3.7",
  "jinja2>=3.1",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.3",
  "mypy>=1.8",
  "types-tqdm",
  "types-Jinja2",
]

[project.scripts]
gbmreadsep = "gbmreadsep.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
